# learn-gcp-cloud-run

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: pj-explore-code-base.md  pj-lang-jp-respomse.md
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
app/: .dockerignore  Dockerfile  README.md  pyproject.toml  ruff.toml
